# agentic_perspective_capture

./: .gitignore  README.md  README_DROPIN.md  pyproject.toml
agentic_perspective_capture/: .gitignore  __init__.py  cli.py
agentic_perspective_capture/perspective_capture/: capture.py  loader.py  models.py  prompts.py  serializers.py
agentic_perspective_capture/runtime/: config.py  logging.py  model.py  openai_model.py
personas/: Ada.md  Aletheia.md  Alison.md  Harry.md  Sael.md  Synaia.md  joan.md  lyla.md  tenzing.md
tests/: test_perspective_capture.py
