[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-perspective-capture"
version = "1.0.0"
description = "Module 1: deterministic agentic perspective capture for Agentic Co-Emergence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
agentic-perspective-capture = "agentic_perspective_capture.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
